--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -19,3 +19,25 @@
   background-color: #f7f3ea;
   color: #011933;
 }
+
+.mobile-menu {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobile-menu-dark {
+  background-color: #011933;
+  color: #f7f3ea;
+}
+
+.mobile-menu-light {
+  background-color: #f7f3ea;
+  color: #011933;
+}
